--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.tutorials</groupId>
-    <artifactId>spring-boot-todo-management-rest-api</artifactId>
+    <artifactId>spring-boot-todo-management-rest-api-with-spring-security-with-spring-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-todo-management-rest-api</name>
-    <description>spring-boot-todo-management-rest-api</description>
+    <name>spring-boot-todo-management-rest-api-with-spring-security</name>
+    <description>spring-boot-todo-management-rest-api-with-spring-security</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -45,6 +45,15 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>annotationProcessor</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
