--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=spring-boot-todo-management-rest-api
-
+spring.application.name=spring-boot-todo-management-rest-api-with-spring-security
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_management
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -8,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#spring.security.user.roles=ADMIN, USER, MANAGER
